<resources>
    <string name="app_name">Trukk</string>
    <string name="trukk">trukk</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="first_name">First Name</string>
    <string name="family_name">Family Name</string>
    <string name="full_name">%1$s %2$s</string>
    <string name="company_name">Company Name (Optional)</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="you_will">You will receive an OTP on your mobile number.</string>
    <string name="next">Next</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="re_enter_password">Re-enter Password</string>

    <!--Order Strings-->
    <string name="ship_anything">Ship Anything!</string>
    <string name="enter_details">Enter Details below order your truck</string>
    <string name="pickup">Pickup</string>
    <string name="when_to">When to pickup?</string>
    <string name="pickup_type">Pickup Shipment type</string>
    <string name="go">GO</string>
    <string name="cargo">CARGO</string>
    <string name="personal">PERSONAL</string>

    <!--Shipment Layout-->
    <string name="description">Description</string>
    <string name="dropOff">Drop Off</string>
    <string name="packaging">Packaging</string>
    <string name="noPackaging">None</string>
    <string name="pallets">Pallets</string>
    <string name="cartons">Cartons</string>
    <string name="other">Other</string>
    <string name="cartonDimensions">Carton Dimensions</string>
    <string name="palletDimensions">Pallet Dimensions</string>
    <string name="h">H</string>
    <string name="l">L</string>
    <string name="w">W</string>
    <string name="cartonWeight">Carton Weight</string>
    <string name="palletWeight">Pallet Weight</string>
    <string name="qty">Qty.</string>
    <string name="truckPreference">Truck Preference</string>
    <string name="noPreference">No Preference</string>
    <string name="van">Van</string>
    <string name="truck">Truck</string>
    <string name="trailer">Trailer</string>
    <string name="reefer">Reefer</string>
    <string name="labourAndHandling">Labour &amp; Handling</string>
    <string name="none">None</string>
    <string name="labour">Labour</string>
    <string name="forklift">Forklift</string>
    <string name="handlingAtUnloading">Handling at Un-loading</string>
    <string name="enterAny">Enter any specific instructions below</string>
    <string name="orAs">Or as a voice note</string>
    <string name="completeShipment">Complete Shipment</string>
    <string name="uploadShipmentPhoto">Upload Shipment Photo</string>
    <string name="loading">Loading</string>
    <string name="unLoading">Un-loading</string>
    <string name="howManyLoading">How many floors at loading?</string>
    <string name="howManyUnLoading">How many floors at un-loading?</string>
    <string name="hold">Hold to record</string>
    <string name="recording">Recording...</string>

    <!--Bottom Sheet layout-->
    <string name="pricing">Pricing?</string>
    <string name="receiveQuotations">Receive Quotations</string>
    <string name="fixedPrice">Fixed Price</string>
    <string name="enterYour">Enter your amount</string>
    <string name="jod">JOD</string>
    <string name="howWould">How would you like to pay?</string>
    <string name="cod">Cash on Delivery</string>
    <string name="card">Card</string>
    <string name="done">Done</string>

    <!--Edit profile layout-->
    <string name="edit">Edit</string>
    <string name="username">Username</string>
    <string name="mobile">Mobile Number</string>
    <string name="firstName">First Name</string>
    <string name="familyName">Family Name</string>
    <string name="changePassword">Change Password</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>

    <!--Contact us layout-->
    <string name="contactUs">Contact Us</string>
    <string name="name">Name</string>
    <string name="email">Email Id</string>
    <string name="phone_number">Phone Number</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>

    <!--Navigation drawer layout-->
    <string name="home">Home</string>
    <string name="myAccount">My Account</string>
    <string name="history">History</string>

    <!--History ViewHolder CardView-->
    <string name="simplyDummy">Simply dummy text of the printing and type-letting industry.</string>
    <string name="truckTypeColon">Truck Type:</string>
    <string name="cartoonWeightColon">Cartoon Weight:</string>
    <string name="weightColon">Weight:</string>
    <string name="weightDummy">200kg</string>
    <string name="qtyDummy">90</string>
    <string name="viewBids">View Bids</string>
    <string name="statusColon">Status:</string>
    <string name="open">Open</string>
    <string name="inTransit">In Transit</string>
    <string name="goingTo">Going to Pickup</string>
    <string name="priceColon">Price:</string>
    <string name="packagingCoon">Packaging:</string>
    <string name="fixed">Fixed</string>
    <string name="driverName">Driver Name</string>
    <string name="dummyDriverName">Roni Mandal</string>
    <string name="callColon">Call:</string>

    <!--Layout View_Bids-->
    <string name="dummyTruckName">ST TRUCKING</string>
    <string name="loremIpsum">Simply dummy text of the printing and type-letting industry. Lorem ipsum has been the industry standard</string>
    <string name="dummyCost">AED 600.00</string>
    <string name="viewTruck">View Truck</string>
    <string name="assignJob">Assign Job</string>
    <string name="dummyDate">Date: 20/05/2019</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <string name="service_not_available">Service not available.</string>
    <string name="invalid_lat_long_used">Invalid Latitude Longitude used.</string>
    <string name="no_address_found">No address found.</string>
    <string name="address_found">Address found.</string>

    <!--Maps Layout-->
    <string name="setLocation">Set Location</string>
    <string name="youAreHere">You are here</string>
    <string name="noResultFound">No result found.</string>
    <string name="search_here">Search Here</string>
    <string name="enter_packaging_details_here">Enter packaging details here...</string>
    <string name="selectLocation">Select Location</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="two">2</string>
    <string name="select_pickup_date">Select Pickup date</string>
    <string name="enter_description_here">Enter Description Here</string>
    <string name="enter_instruction">Enter instruction here or record audio</string>
    <string name="send_otp_again">Resend OTP</string>
    <string name="otp_sent_to_your_mobile_number">OTP sent to your mobile number</string>
    <string name="otp">OTP</string>

    <!--Notification chnnel Id-->
    <string name="default_notification_channel_id">r32urfv@$c%ds4d8trjdcf4iew493.dcr59369ve#^d3#df3%h2#z2oub$rr34t8i</string>
    <string name="no_bids_to_show">No bids to show</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
</resources>
