<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="3dp"
    android:background="@drawable/vh_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/lyt_history_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="16dp">

            <com.trukk.customviews.TextViewOpenSans
                android:id="@+id/tv_history_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="18sp"
                android:textColor="@color/colorOrange"
                android:text="@string/description"/>

            <com.trukk.customviews.TextViewOpenSans
                android:id="@+id/tv_history_drop_off_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_history_description"
                android:layout_marginTop="16dp"
                android:textSize="12sp"
                android:textColor="@android:color/black"
                android:text="@string/dropOff"/>
            <com.trukk.customviews.TextViewOpenSans
                android:id="@+id/tv_history_drop_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_history_drop_off_heading"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                android:text="@string/simplyDummy"/>
            <LinearLayout
                android:id="@+id/lyt_linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_history_drop_off"
                >
                <com.trukk.customviews.TextViewOpenSans
                    android:id="@+id/tv_history_truck_type_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:text="@string/truckTypeColon"/>
                <com.trukk.customviews.TextViewOpenSans
                    android:id="@+id/tv_history_truck_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:textSize="12sp"
                    android:text="@string/noPreference"/>
                <com.trukk.customviews.TextViewOpenSans
                    android:id="@+id/tv_history_cartoon_weight_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:text="@string/weightColon" />
                <com.trukk.customviews.TextViewOpenSans
                    android:id="@+id/tv_history_cartoon_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:textSize="12sp"
                    android:text="-" />
                <com.trukk.customviews.TextViewOpenSans
                    android:id="@+id/tv_history_qty_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:text="@string/qty" />
                <com.trukk.customviews.TextViewOpenSans
                    android:id="@+id/tv_history_qty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:textSize="12sp"
                    android:text="-" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyt_linear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lyt_linear1"
                android:orientation="horizontal"
                android:visibility="visible">

                <com.trukk.customviews.TextViewOpenSans
                    android:id="@+id/tv_history_price_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:text="@string/priceColon"/>
                <com.trukk.customviews.TextViewOpenSans
                    android:id="@+id/tv_history_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:textSize="12sp"
                    android:text="-"/>

                <com.trukk.customviews.TextViewOpenSans
                    android:id="@+id/tv_history_packaging_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:text="@string/packagingCoon"/>
                <com.trukk.customviews.TextViewOpenSans
                    android:id="@+id/tv_history_packaging"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:textSize="12sp"
                    android:text="@string/none"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyt_linear3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lyt_linear2"
                android:orientation="horizontal"
                android:visibility="visible">

                <com.trukk.customviews.TextViewOpenSans
                    android:id="@+id/tv_history_driver_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:text="@string/driverName"/>
                <com.trukk.customviews.TextViewOpenSans
                    android:id="@+id/tv_history_driver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:textSize="12sp"
                    android:text="@string/dummyDriverName"/>

                <com.trukk.customviews.TextViewOpenSans
                    android:id="@+id/tv_history_call_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:text="@string/callColon"/>
                <ImageView
                    android:id="@+id/img_history_call"
                    android:layout_width="48dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/ic_phone_white_16dp"
                    android:background="@drawable/img_call_orange_bg"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyt_linear4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lyt_linear3"
                android:orientation="horizontal">

                <com.trukk.customviews.TextViewOpenSans
                    android:id="@+id/tv_history_view_bids"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:paddingLeft="16dp"
                    android:paddingTop="10dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="10dp"
                    android:background="@drawable/img_call_orange_bg"
                    android:textSize="14sp"
                    android:textColor="@android:color/white"
                    android:text="@string/viewBids"/>
                <com.trukk.customviews.TextViewOpenSans
                    android:id="@+id/tv_history_status_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:text="@string/statusColon"
                    />
                <com.trukk.customviews.TextViewOpenSans
                    android:id="@+id/tv_history_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorOrange"
                    android:text="@string/open"
                    />
            </LinearLayout>

        </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>