<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/vh_bg"
    android:elevation="3dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/lyt_constraint1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_view_bids_truck"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@color/colorGrey"
                />

            <com.trukk.customviews.TextViewOpenSans
                android:id="@+id/tv_view_bids_truck_name"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:gravity="center_vertical"
                android:text="@string/dummyTruckName"
                android:textColor="@color/colorOrange"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/img_view_bids_truck"
                app:layout_constraintTop_toTopOf="parent" />
            
            <com.trukk.customviews.TextViewOpenSans
                android:id="@+id/tv_view_bids_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="12sp"
                android:text="@string/dummyDate"/>

            <com.trukk.customviews.TextViewOpenSans
                android:id="@+id/tv_view_bids_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_view_bids_truck"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                android:text="@string/loremIpsum"/>
            
            <com.trukk.customviews.TextViewOpenSans
                android:id="@+id/tv_view_bids_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_view_bids_description"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:textColor="@color/colorOrange"
                android:text="@string/dummyCost"/>

            <com.trukk.customviews.ButtonOpenSans
                android:id="@+id/btn_view_bids_view_truck"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_view_bids_price"
                app:layout_constraintEnd_toStartOf="@id/btn_view_bids_assign_jobs"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_dark_grey_bg"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:text="@string/viewTruck"/>

            <com.trukk.customviews.ButtonOpenSans
                android:id="@+id/btn_view_bids_assign_jobs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/btn_view_bids_view_truck"
                app:layout_constraintTop_toBottomOf="@id/tv_view_bids_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_green_bg"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:text="@string/assignJob"/>

        </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>